@@ -2,6 +2,7 @@
 0.0.38
 ========================
 
+- added `PAUSE(is_paused)` method that can pause loading of all Total.js dependencies
 - fixed measuring dimension for `.gif` images
 - improved some parts of code
 
